--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .App {
   text-align: center;
 }
+.navbar{
+  
+    top: 0;
+    left: 0;
+    
+    padding: 1rem ;
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #000000;
+    
+    
+}
 
 .App-logo {
   height: 40vmin;
